@@ -6,7 +6,6 @@ import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -36,16 +35,16 @@ import main.cl.dagserver.infra.adapters.input.graphql.types.Uncompiled;
 @Component
 public class QueryResolver implements GraphQLQueryResolver {
 	
-	
-	@Autowired
-	SchedulerQueryUseCase handler;
-	
-	@Autowired
-	LoginUseCase login;
-	
-	@Autowired
-	QueryResolverMapper mapper;
+	private SchedulerQueryUseCase handler;
+	private LoginUseCase login;
+	private QueryResolverMapper mapper;
 
+	@Autowired
+	public QueryResolver(SchedulerQueryUseCase handler,LoginUseCase login,QueryResolverMapper mapper) {
+		this.handler = handler;
+		this.login = login;
+		this.mapper = mapper;
+	}
 	
 	public String login(String username,String pwdhash) {
 		return login.apply(Arrays.asList(username, pwdhash));
@@ -121,40 +120,29 @@ public class QueryResolver implements GraphQLQueryResolver {
 	}
 	public List<LogEntry> logs(String dagname) throws DomainException{
 		var rv = new ArrayList<LogEntry>();
-		
-			var arr = handler.getLogs(dagname);
-			for (Iterator<LogDTO> iterator = arr.iterator(); iterator.hasNext();) {
-				LogDTO log =  iterator.next();
-				var entry = new LogEntry();
-				entry.setDagname(log.getDagname());
-				entry.setExecDt(log.getExecDt());
-				entry.setId(log.getId());
-				entry.setValue(log.getValue());
-				entry.setOutputxcom(log.getOutputxcom());
-				entry.setChannel(log.getChannel());
-				entry.setStatus(log.getStatus());
-				entry.setMarks(log.getMarks());
-				rv.add(entry);
-			}	
-				
+		var arr = handler.getLogs(dagname);
+		this.setListLog(rv, arr);	
 		return rv;
+	}
+	private void setListLog(List<LogEntry> rv,List<LogDTO> arr) {
+		for (Iterator<LogDTO> iterator = arr.iterator(); iterator.hasNext();) {
+			LogDTO log =  iterator.next();
+			var entry = new LogEntry();
+			entry.setDagname(log.getDagname());
+			entry.setExecDt(log.getExecDt());
+			entry.setId(log.getId());
+			entry.setValue(log.getValue());
+			entry.setOutputxcom(log.getOutputxcom());
+			entry.setChannel(log.getChannel());
+			entry.setStatus(log.getStatus());
+			entry.setMarks(log.getMarks());
+			rv.add(entry);
+		}
 	}
 	public List<LogEntry> last() throws DomainException{
 		var rv = new ArrayList<LogEntry>();
 		var arr = handler.getLastLogs();
-		for (Iterator<LogDTO> iterator = arr.iterator(); iterator.hasNext();) {
-				LogDTO log =  iterator.next();
-				var entry = new LogEntry();
-				entry.setDagname(log.getDagname());
-				entry.setExecDt(log.getExecDt());
-				entry.setId(log.getId());
-				entry.setValue(log.getValue());
-				entry.setOutputxcom(log.getOutputxcom());
-				entry.setChannel(log.getChannel());
-				entry.setStatus(log.getStatus());
-				entry.setMarks(log.getMarks());
-				rv.add(entry);
-		}	
+		this.setListLog(rv, arr);
 		return rv;
 	}
 	
@@ -193,17 +181,17 @@ public class QueryResolver implements GraphQLQueryResolver {
 		return status;
 	}
 	public List<Property> properties() throws DomainException{
-		return handler.properties().stream().map(elt -> mapper.toProperty(elt)).collect(Collectors.toList());
+		return handler.properties().stream().map(elt -> mapper.toProperty(elt)).toList();
 	}
 	public List<Agent> agents(){
-		return handler.agents().stream().map(elt -> mapper.toAgent(elt)).collect(Collectors.toList());
+		return handler.agents().stream().map(elt -> mapper.toAgent(elt)).toList();
 	}
 	
 	public List<Uncompiled> getUncompileds(String token) throws DomainException{
-		return handler.getUncompileds(token).stream().map(elt -> mapper.toUncompiled(elt)).collect(Collectors.toList());
+		return handler.getUncompileds(token).stream().map(elt -> mapper.toUncompiled(elt)).toList();
 	}
 	public List<Account> credentials(String token) throws DomainException{
-		return handler.credentials(token).stream().map(elt -> mapper.toAccount(elt)).collect(Collectors.toList());
+		return handler.credentials(token).stream().map(elt -> mapper.toAccount(elt)).toList();
 	}
 	public String getIcons(String type) throws DomainException {
 		return handler.getIcons(type);
@@ -216,11 +204,9 @@ public class QueryResolver implements GraphQLQueryResolver {
 		return deps; 
 	}
 	public List<Channel> channelStatus(String token) throws DomainException {
-		return handler.getChannels(token).stream().map(elt -> mapper.toChannel(elt)).collect(Collectors.toList());
+		return handler.getChannels(token).stream().map(elt -> mapper.toChannel(elt)).toList();
 	}
 	public String exportUncompiled(String token,Integer uncompiled) throws DomainException {
-		
 		return handler.exportUncompiled(token,uncompiled);
-		
 	}
 }
